--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 	}
 }
 
-version = "2.0"
+version = "2.1"
 group = "com.chocohead.eumj"
 archivesBaseName = "EU-MJ Engine"
 
@@ -45,7 +45,7 @@ minecraft {
 
 dependencies {
 	deobfCompile "net.industrial-craft:industrialcraft-2:2.8.53-ex112:dev"
-	deobfCompile "com.mod-buildcraft:buildcraft:7.99.15-pre7"
+	deobfCompile "com.mod-buildcraft:buildcraft:7.99.15"
 	//provided fileTree(dir: 'lib', include: '*.jar')
 }
 
