Port to buildcraft  7.99.21.

--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ minecraft {
 
 dependencies {
 	deobfCompile "net.industrial-craft:industrialcraft-2:2.8.82-ex112:dev"
-	deobfCompile "com.mod-buildcraft:buildcraft:7.99.17"
+	deobfCompile "com.mod-buildcraft:buildcraft-main:7.99.21"
 	//provided fileTree(dir: 'lib', include: '*.jar')
 }
 
