--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ repositories {
 	}
 }
 
-version = "2.7.1"
+version = "1.1"
 group = "com.chocohead.eumj"
-archivesBaseName = "EU-MJ Engine"
+archivesBaseName = "EU-MJ Engine UPDATED"
 
 sourceCompatibility = targetCompatibility = "1.8" // Need this here so eclipse task generates correctly.
 compileJava {
@@ -44,7 +44,7 @@ minecraft {
 }
 
 dependencies {
-	deobfCompile "net.industrial-craft:industrialcraft-2:2.8.111-ex112:dev"
+	deobfCompile "net.industrial-craft:industrialcraft-2:2.8.222-ex112:dev"
 	deobfCompile "com.mod-buildcraft:buildcraft-main:7.99.24.8"
 	//provided fileTree(dir: 'lib', include: '*.jar')
 }
